--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/leonardo-rezende-nakashima/">Linkedin</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/leozende">GitHub</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://www.dio.me/users/leonardo_nakashima">DIO</a></li>
+  </ul>
+</div>
