--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,15 +1,15 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-    src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png"
+    src="{{photoCover}}"
     alt=""
     height="200px"
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card__description">
-    <p><a href="#">Sint consectetur veniam nulla ipsum voluptate eu incididunt cillum irure duis. Est esse nisi in aute irure consectetur proident esse aliquip. Ad eiusmod nostrud do magna incididunt elit. </a></p>
+    <p><a href="#">{{cardDescription}} </a></p>
   </div>
 </div>
