--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,12 +2,12 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-      src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png"
+      src="{{photoCover}}"
       alt=""
       >
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>
   <div class="container__small-card__separator">
