--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,27 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card photoCover="https://res.cloudinary.com/practicaldev/image/fetch/s--WvVURxBi--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/3w55yv1farftwh4043r4.jpg" cardTitle="Novo Angular"
+    cardDescription="Angula 17 totalmente diferente do antigo."></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      cardTitle="Atualizações e mudanças do Angular 17"
+      photoCover="https://miro.medium.com/v2/resize:fit:1009/1*rHhkqFJ0PVEMHwcHjJZaKA.png"
+    >
+
+    </app-small-card>
+    <app-small-card
+      cardTitle="React ou Angular?"
+      photoCover="https://cynoteck.com/wp-content/uploads/2022/02/react-vs-angular.jpg"
+    >
+
+    </app-small-card>
+    <app-small-card
+      cardTitle="Angular Blog"
+      photoCover="https://cdn-images-1.medium.com/max/92/1*uJa0SU-F2NXVKhHTbP1HBw@2x.png"
+    >
+
+    </app-small-card>
   </div>
 </div>
